<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:gravity="center|left"
        android:text="@string/android"
        android:paddingStart="20dp"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp">

        <View
            android:layout_width="20dp"
            android:layout_height="37dp" />

        <ImageView
            android:layout_width="145dp"
            android:layout_height="match_parent"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="center|bottom"
                android:text="@string/postsAmount"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="top|center"
                android:text="@string/posts"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="center|bottom"
                android:text="@string/followersAmount"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center"
                android:text="@string/followers"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="center|bottom"
                android:text="@string/followingAmount"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center"
                android:text="@string/following"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="21sp"
        android:gravity="bottom|left"
        android:text="@string/username"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:layout_marginLeft="21sp"
        android:gravity="bottom|left"
        android:text="@string/address"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginLeft="21sp"
        android:text="@string/description"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGray" />

        <View
            android:layout_width="22dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGray" />

        <View
            android:layout_width="22dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGray" />

        <View
            android:layout_width="22dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGray" />

        <View
            android:layout_width="22dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGray" />

        <View
            android:layout_width="22dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="43dp"
                android:layout_height="37dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/ic_baseline_forward_24" />

            <Button
                android:layout_width="100dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:text="@string/derections"
                android:textColor="@color/colorBlue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="43dp"
                android:layout_height="37dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/ic_baseline_local_phone_24" />

            <Button
                android:layout_width="100dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:text="@string/call"
                android:textColor="@color/colorBlue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="43dp"
                android:layout_height="37dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/ic_baseline_star_24" />

            <Button
                android:layout_width="100dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:text="@string/save"
                android:textColor="@color/colorBlue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="43dp"
                android:layout_height="37dp"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/ic_baseline_link_24" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:text="@string/website"
                android:textColor="@color/colorBlue" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGray">


        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="113dp"
            android:layout_height="89dp"
            android:layout_marginLeft="20dp"
            android:background="@color/colorGray" />

        <ImageView
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@color/colorGray" />

        <ImageView
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@color/colorGray" />
    </LinearLayout>
</LinearLayout>